--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Ayush Parwal
+# logo: /assets/img/headshot_circle.png
+description: "AI researcher and ML engineer passionate about solving real-world problems."
+show_downloads: true
+theme: jekyll-theme-minimal
