--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ayush Parwal
 logo: /assets/img/tomcat-sleep.jpg
-description: "AI researcher and ML engineer passionate about solving real-world problems."
+description: "AI & LLMs researcher and Machine Learning engineer passionate about solving real-world problems."
 show_downloads: true
 theme: jekyll-theme-minimal
