--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ayush Parwal
 logo: /assets/img/tomcat-sleep.jpg
 description: "AI & LLMs researcher and Machine Learning engineer passionate about solving real-world problems."
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
