--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: Ayush Parwal
 logo: /assets/img/tomcat-sleep.jpg
-description: "AI & LLMs researcher and Machine Learning engineer passionate about solving real-world problems."
-# show_downloads: false
-theme: jekyll-theme-minimal
+description: "Machine Learning, AI Researcher with a passion for Search Engines and Natural Language Processing."
+theme: jekyll-theme-cayman-dark
